--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 	
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
-        <h2>Spotlight</h2>
-        <p>This is a <strong>Spotlight</strong> element, and it's generally used &ndash; as its name implies &ndash; to spotlight a particular feature, subject, or pretty much whatever. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
+        <h2>聚光燈</h2>
+        <p>這是 <strong>聚光燈</strong> 元素, and it's generally used &ndash; as its name implies &ndash; to spotlight a particular feature, subject, or pretty much whatever. 可以調整一下五條位置 <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
 </p>
         <ul class="actions stacked">
-            <li><a href="#" class="button">Learn More</a></li>
+            <li><a href="#" class="button">了解更多</a></li>
         </ul>
     </div>
     <div class="image">
@@ -101,8 +101,8 @@
 	
 <section class="wrapper style1 align-center" >
     <div class="inner">
-        <h2>Gallery</h2>
-        <p>This is a <strong>Gallery</strong> element. It can behave as a lightbox (when given the <code>lightbox</code> class), and you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-gallery">details</a>).
+        <h2>相簿</h2>
+        <p>這邊是 <strong>相簿</strong> 元素. It can behave as a lightbox (when given the <code>lightbox</code> class), and you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-gallery">details</a>).
 </p>
     </div>
 
