--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <section class="wrapper style1 align-center" >
     <div class="inner">
         <h2>相簿</h2>
-        <p>這邊是 <strong>相簿</strong> 元素. It can behave as a lightbox (when given the <code>lightbox</code> class), and you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-gallery">details</a>).
+        <p>這邊是 <strong>相簿</strong> 的元素. It can behave as a lightbox (when given the <code>lightbox</code> class), and you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-gallery">details</a>).
 </p>
     </div>
 
