--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
-        <h2>聚光燈</h2>
+        <h2>五條悟</h2>
         <p>這是 <strong>聚光燈</strong> 元素, and it's generally used &ndash; as its name implies &ndash; to spotlight a particular feature, subject, or pretty much whatever. 可以調整一下五條位置 <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
 </p>
         <ul class="actions stacked">
@@ -73,7 +73,7 @@
 	
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
-        <h2>Spotlight</h2>
+        <h2>戰敗貓咪</h2>
         <p>This is also a <strong>Spotlight</strong> element, and it's here because this demo would look a bit empty with just one spotlight. Like all spotlights, you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
 </p>
         <ul class="actions stacked">
