--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
         <h2>戰敗貓咪</h2>
-        <p>This is also a <strong>Spotlight</strong> element, and it's here because this demo would look a bit empty with just one spotlight. Like all spotlights, you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
+        <p>一樣同上 <strong>自行遊玩</strong> 設定, and it's here because this demo would look a bit empty with just one spotlight. Like all spotlights, you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
 </p>
         <ul class="actions stacked">
-            <li><a href="#" class="button">Learn More</a></li>
+            <li><a href="#" class="button">了解更多</a></li>
         </ul>
     </div>
     <div class="image">
