--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 <footer class="wrapper style1 align-center">
     <div class="inner">
         <ul class="icons">
-            <li><a target="_blank" href="https://github.com/caressofsteel/" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
+            <li><a target="_blank" href="https://github.com/chuchu31666" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
             <li><a target="_blank" href="https://twitter.com/" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
             <li><a target="_blank" href="https://instagram.com" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
             <li><a target="_blank" href="https://linkedin.com" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
