--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>波波的個人BLOG</h1>
         <p class="major">歡迎來到我的個人網站 <a target="_blank" href="https://creativecommons.org/licenses/by/3.0/">Creative Commons</a>.
 </p>
-        <p>這是我 <strong>無聊時</strong> 製作的網頁 底線功能可以玩玩 <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).
+        <p>這是我 <strong>無聊時</strong> 製作的網頁 底線功能可以玩玩 <span class="demo-controls">appearance with a number of modifiers</span>, 不定期更新 <code>按讚</code> or <code>訂閱</code> 分享-並沒有 (<a href="#reference-banner">details</a>).
 </p>
         <ul class="actions stacked">
             <li><a href="#first" class="button primary large wide smooth-scroll-middle">Get Started</a></li>
@@ -60,7 +60,7 @@
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
         <h2>五條悟</h2>
-        <p>這是 <strong>聚光燈</strong> 元素, and it's generally used &ndash; as its name implies &ndash; to spotlight a particular feature, subject, or pretty much whatever. 可以調整一下五條位置 <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
+        <p>這是 <strong>聚光燈</strong> 元素, 領域展開 &ndash; 無量空處 &ndash; 有興趣的. 可以調整一下五條位置 <span class="demo-controls">appearance with a number of modifiers</span>, 歡迎同好<code>按讚</code> or <code>訂閱</code> 分享-不存在的 (<a href="#reference-spotlight">details</a>).
 </p>
         <ul class="actions stacked">
             <li><a href="#" class="button">了解更多</a></li>
@@ -74,7 +74,7 @@
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
         <h2>戰敗貓咪</h2>
-        <p>一樣同上 <strong>自行遊玩</strong> 設定, and it's here because this demo would look a bit empty with just one spotlight. Like all spotlights, you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
+        <p>一樣同上 <strong>自行遊玩</strong> 設定, 差別在於貓咪是會動的. 喜歡也可以玩一下 <span class="demo-controls">appearance with a number of modifiers</span>, 強烈建議 <code>按讚</code> or <code>訂閱</code> 分享-真的沒有 (<a href="#reference-spotlight">details</a>).
 </p>
         <ul class="actions stacked">
             <li><a href="#" class="button">了解更多</a></li>
@@ -87,8 +87,8 @@
 	
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
-        <h2>Spotlight</h2>
-        <p>And yes, this is another <strong>Spotlight</strong> element, and it's also here because I need to fill a bit of space. Naturally, like any other spotlight, you can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
+        <h2>狗卷棘</h2>
+        <p>A東京都立咒術高等專門學校的二年級生。 <strong>狗卷棘</strong> 能利用自身的話語作為詛咒武器的咒言師末裔。為了防止不經意間詛咒到別人，平時只會以飯糰的材料名説話。 <span class="demo-controls">appearance with a number of modifiers</span>, 喜歡狗捲的可以 <code>按讚</code> or <code>訂閱</code> 分享-假的 (<a href="#reference-spotlight">details</a>).
 </p>
         <ul class="actions stacked">
             <li><a href="#" class="button">Learn More</a></li>
