--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
     <div class="content">
         <h1>波波的個人BLOG</h1>
-        <p class="major">歡迎來到我的個人網站 <a target="_blank" href="https://creativecommons.org/licenses/by/3.0/">Creative Commons</a>.
+        <p class="major">歡迎來到我的個人網站 
 </p>
         <p>這是我 <strong>無聊時</strong> 製作的網頁 底線功能可以玩玩 <span class="demo-controls">appearance with a number of modifiers</span>, 不定期更新 <code>按讚</code> or <code>訂閱</code> 分享(並沒有) (<a href="#reference-banner">details</a>).
 </p>
