--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <img src="images/gallery/thumbs/01.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>伏魔御廚子</h3>
+        <p>兩面宿儺領域展開.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -128,8 +128,8 @@
         <img src="images/gallery/thumbs/02.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>天上天下</h3>
+        <p>天上天下 唯我獨尊.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -142,8 +142,8 @@
         <img src="images/gallery/thumbs/03.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>狗卷棘</h3>
+        <p>狗卷雜誌.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -156,8 +156,8 @@
         <img src="images/gallery/thumbs/04.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>領域展開</h3>
+        <p>伏魔御廚子.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -170,8 +170,8 @@
         <img src="images/gallery/thumbs/05.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>兩面宿儺</h3>
+        <p>術式展開.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -184,8 +184,8 @@
         <img src="images/gallery/thumbs/06.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>五條悟</h3>
+        <p>五條與貓.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -198,8 +198,8 @@
         <img src="images/gallery/thumbs/07.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>虛式·茈</h3>
+        <p>「蒼」和「赫」的組合技，令正無窮和負無窮組合產生衝突使假想之力傾瀉而出形成破壞力極強的咒力黑洞球，是目前殺傷力最大的技能之一，距離遠、直徑大，五條悟早期曾初次用此招一擊貫穿了伏黑甚爾的半個身軀。</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -212,8 +212,8 @@
         <img src="images/gallery/thumbs/08.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>集合</h3>
+        <p>五條小隊.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -226,8 +226,8 @@
         <img src="images/gallery/thumbs/09.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>六眼</h3>
+        <p>帥氣的六眼.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -240,8 +240,8 @@
         <img src="images/gallery/thumbs/10.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>通勤日常</h3>
+        <p>你各位上班啦.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -254,8 +254,8 @@
         <img src="images/gallery/thumbs/11.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>全員集合</h3>
+        <p>人多到不行.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
@@ -268,8 +268,8 @@
         <img src="images/gallery/thumbs/12.jpg" alt="" />
     </a>
     <div class="caption">
-        <h3>Title</h3>
-        <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+        <h3>伏黒惠</h3>
+        <p>「十種影法術」能夠掌握式神.</p>
         <ul class="actions fixed">
             <li><span class="button small">Details</span></li>
         </ul>
