--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <section>
     <span class="icon style2 major fa-gem"></span>
     <h3>One</h3>
-    <p>積極主動
+    <p><strong>積極主動</strong>
         我總是主動尋找解決問題的方法，並且樂於接受挑戰。我認為積極的態度能讓人在人生的每個階段都取得成功。</p>
 </section>
 
@@ -298,7 +298,7 @@
                 <section>
     <span class="icon solid style2 major fa-save"></span>
     <h3>Two</h3>
-    <p>創新思維
+    <p><strong>創新思維</strong>
         我擅長從不同角度看待問題，並且喜歡嘗試新方法來解決問題，這讓我在工作和學習中都能帶來新的突破。</p>
 </section>
 
@@ -306,7 +306,7 @@
                 <section>
     <span class="icon solid style2 major fa-chart-bar"></span>
     <h3>Three</h3>
-    <p>善於溝通
+    <p><strong>善於溝通</strong>
         我擁有良好的溝通能力，能夠清晰表達自己的想法，也能聆聽他人意見，促進團隊合作與協作。</p>
 </section>
 
@@ -314,7 +314,7 @@
                 <section>
     <span class="icon solid style2 major fa-wifi"></span>
     <h3>Four</h3>
-    <p>負責任
+    <p><strong>負責任</strong>
         我對自己的工作和行為有高度的責任感，無論是個人生活還是工作中，我都會盡全力完成每一項任務。</p>
 </section>
 
@@ -322,7 +322,7 @@
                 <section>
     <span class="icon solid style2 major fa-cog"></span>
     <h3>Five</h3>
-    <p>團隊合作精神
+    <p><strong>團隊合作精神</strong>
         我認為團隊合作是成功的關鍵，並且總是積極參與團隊中的討論與活動，支持同事們達成共同目標。</p>
 </section>
 
@@ -330,7 +330,7 @@
                 <section>
     <span class="icon style2 major fa-paper-plane"></span>
     <h3>Six</h3>
-    <p>自我激勵
+    <p><strong>自我激勵</strong>
         我能在沒有外界過多干預的情況下，保持高效的工作和學習狀態。我設立明確的目標並努力達成它們。</p>
 </section>
 
@@ -338,7 +338,7 @@
                 <section>
     <span class="icon solid style2 major fa-desktop"></span>
     <h3>Seven</h3>
-    <p>細心謹慎
+    <p><strong>細心謹慎</strong>
         我做事細心且有耐心，常常注意到別人可能忽略的小細節，這使我在處理複雜任務時能夠避免錯誤。</p>
 </section>
 
@@ -346,7 +346,7 @@
                 <section>
     <span class="icon solid style2 major fa-sync-alt"></span>
     <h3>Eight</h3>
-    <p>樂於學習
+    <p><strong>樂於學習</strong>
         我對學習新知識有著濃厚的興趣，無論是專業技能還是生活技能，我總是樂於探索和學習，並且不斷提升自己。</p>
 </section>
 
@@ -354,7 +354,7 @@
                 <section>
     <span class="icon solid style2 major fa-hashtag"></span>
     <h3>Nine</h3>
-    <p>靈活適應
+    <p><strong>靈活適應</strong>
         面對變化，我能夠迅速適應並調整自己的計劃與策略，這讓我能夠在動態的環境中穩步前進。</p>
 </section>
 
@@ -362,7 +362,7 @@
                 <section>
     <span class="icon solid style2 major fa-bolt"></span>
     <h3>Ten</h3>
-    <p>情緒穩定
+    <p><strong>情緒穩定</strong>
         我能夠保持冷靜的心態面對壓力與挑戰，這使我能夠在高壓情境下依然做出理智的決策。</p>
 </section>
 
