--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h3>伏魔御廚子</h3>
         <p>兩面宿儺領域展開.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -131,7 +131,7 @@
         <h3>天上天下</h3>
         <p>天上天下 唯我獨尊.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -145,7 +145,7 @@
         <h3>狗卷棘</h3>
         <p>狗卷雜誌.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -159,7 +159,7 @@
         <h3>領域展開</h3>
         <p>伏魔御廚子.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -173,7 +173,7 @@
         <h3>兩面宿儺</h3>
         <p>術式展開.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -187,7 +187,7 @@
         <h3>五條悟</h3>
         <p>五條與貓.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -201,7 +201,7 @@
         <h3>虛式·茈</h3>
         <p>「蒼」和「赫」的組合技，令正無窮和負無窮組合產生衝突使假想之力傾瀉而出形成破壞力極強的咒力黑洞球，是目前殺傷力最大的技能之一，距離遠、直徑大，五條悟早期曾初次用此招一擊貫穿了伏黑甚爾的半個身軀。</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -215,7 +215,7 @@
         <h3>集合</h3>
         <p>五條小隊.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -229,7 +229,7 @@
         <h3>六眼</h3>
         <p>帥氣的六眼.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -243,7 +243,7 @@
         <h3>通勤日常</h3>
         <p>你各位上班啦.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -257,7 +257,7 @@
         <h3>全員集合</h3>
         <p>人多到不行.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
@@ -271,7 +271,7 @@
         <h3>領域展開</h3>
         <p>無量空處.</p>
         <ul class="actions fixed">
-            <li><span class="button small">Details</span></li>
+            <li><span class="button small">查看大圖</span></li>
         </ul>
     </div>
 </article>
