--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <section class="wrapper style1 align-center">
     <div class="inner">
         <h2>介紹區塊</h2>
-        <p>這邊介紹我的 <strong>特點</strong> 你可以查看區塊介紹<span class="demo-controls">appearance with a number of modifiers</span>, 喜歡一樣可以 <code>按讚</code> or <code>訂閱</code> 分享(騙你的)(<a href="#reference-items">details</a>).
+        <p>這邊介紹我的 <strong>特點</strong> 你可以查看區塊介紹<span class="demo-controls">appearance with a number of modifiers</span>, 喜歡一樣可以 <code>按讚</code> or <code>訂閱</code> 分享(騙你的)
 </p>
         <div class="items style1 medium onscroll-fade-in">
             
