--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <li><a target="_blank" href="https://linkedin.com" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
             <li><a target="_blank" href="mailto:chuchu31666@gmail.com" class="fav icon style2 fa-envelope"><span class="label">Email</span></a></li>
         </ul>
-        <p>波波的個人BLOG &copy; 2024 <a target="_blank" href="https://github.com/chuchu31666">波波Github</a><span class="footerspacer icon fa-diamond"></span>
+        <p>祝波波的個人BLOG &copy; 2024 <a target="_blank" href="https://github.com/chuchu31666">波波Github</a><span class="footerspacer icon fa-diamond"></span>
            <span class="footerspacer icon fa-diamond"></span>
             Images courtesy of <a target="_blank" href="https://medibang.com/">ART street</a></p>
 </div>
