--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </a>
     <div class="caption">
         <h3>伏魔御廚子</h3>
-        <p>兩面宿儺領域展開.</p>
+        <p>兩面宿儺領域展開</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -129,7 +129,7 @@
     </a>
     <div class="caption">
         <h3>天上天下</h3>
-        <p>天上天下 唯我獨尊.</p>
+        <p>天上天下 唯我獨尊</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -143,7 +143,7 @@
     </a>
     <div class="caption">
         <h3>狗卷棘</h3>
-        <p>狗卷雜誌.</p>
+        <p>狗卷雜誌</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -157,7 +157,7 @@
     </a>
     <div class="caption">
         <h3>領域展開</h3>
-        <p>伏魔御廚子.</p>
+        <p>伏魔御廚子</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -171,7 +171,7 @@
     </a>
     <div class="caption">
         <h3>兩面宿儺</h3>
-        <p>術式展開.</p>
+        <p>術式展開</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -185,7 +185,7 @@
     </a>
     <div class="caption">
         <h3>五條悟</h3>
-        <p>五條與貓.</p>
+        <p>五條與貓</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -213,7 +213,7 @@
     </a>
     <div class="caption">
         <h3>集合</h3>
-        <p>五條小隊.</p>
+        <p>五條小隊</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -227,7 +227,7 @@
     </a>
     <div class="caption">
         <h3>六眼</h3>
-        <p>帥氣的六眼.</p>
+        <p>帥氣的六眼</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -241,7 +241,7 @@
     </a>
     <div class="caption">
         <h3>通勤日常</h3>
-        <p>你各位上班啦.</p>
+        <p>你各位上班啦</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -255,7 +255,7 @@
     </a>
     <div class="caption">
         <h3>全員集合</h3>
-        <p>人多到不行.</p>
+        <p>人多到不行</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -269,7 +269,7 @@
     </a>
     <div class="caption">
         <h3>領域展開</h3>
-        <p>無量空處.</p>
+        <p>無量空處</p>
         <ul class="actions fixed">
             <li><span class="button small">查看大圖</span></li>
         </ul>
@@ -370,14 +370,14 @@
                 <section>
     <span class="icon style2 major fa-envelope"></span>
     <h3>Eleven</h3>
-    <p>ㄜ 我就還沒想好 之後再填吧..</p>
+    <p>ㄜ 我就還沒想好 之後再填吧...</p>
 </section>
 
             
                 <section>
     <span class="icon solid style2 major fa-leaf"></span>
     <h3>Twelve</h3>
-    <p>ㄜ 我就還沒想好 之後再填吧..</p>
+    <p>ㄜ 我就還沒想好 之後再填吧...</p>
 </section>
 
             
@@ -396,7 +396,7 @@
             <li><a target="_blank" href="https://linkedin.com" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
             <li><a target="_blank" href="mailto:chuchu31666@gmail.com" class="fav icon style2 fa-envelope"><span class="label">Email</span></a></li>
         </ul>
-        <p>祝波波的個人BLOG &copy; 2024 <a target="_blank" href="https://github.com/chuchu31666">波波Github</a><span class="footerspacer icon fa-diamond"></span>
+        <p>祝波波的個人BLOG &copy; 2024 <a target="_blank" href="https://github.com/chuchu31666">波波的Github</a><span class="footerspacer icon fa-diamond"></span>
            <span class="footerspacer icon fa-diamond"></span>
             Images courtesy of <a target="_blank" href="https://medibang.com/">ART street</a></p>
 </div>
