--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
         <h2>五條悟</h2>
-        <p>這是 <strong>控制</strong> 元素, 簡介:領域展開 &ndash; 無量空處 &ndash; 有興趣的. 可以調整一下五條位置 <span class="demo-controls">appearance with a number of modifiers</span>, 歡迎同好<code>按讚</code> or <code>訂閱</code> 分享(不存在的) .
+        <p>這是 <strong>控制</strong> 元素, 簡介:領域展開 &ndash; 無量空處 &ndash; 有興趣的. 可以調整一下五條位置 <span class="demo-controls">appearance with a number of modifiers</span>, 歡迎同好<code>按讚</code> or <code>訂閱</code> 分享(不存在) .
 </p>
         <ul class="actions stacked">
             <li><a href="#" class="button">了解更多</a></li>
@@ -429,3 +429,4 @@
 
 	</body>
 </html>
+
