--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>祝波波的個人BLOG</h1>
         <p class="major">歡迎來到我的個人網站 
 </p>
-        <p>這是我 <strong>無聊時</strong> 製作的網頁 底線功能可以玩玩 <span class="demo-controls">appearance with a number of modifiers</span>, 不定期更新 <code>按讚</code> or <code>訂閱</code> 分享(並沒有) (<a href="#reference-banner">詳細</a>).
+        <p>這是我的個人專頁，<strong>在閒暇時製作。 </strong> 您可以試玩底線功能 <span class="demo-controls">appearance with a number of modifiers</span>, 不定期更新 <code>按讚</code> or <code>訂閱</code> 分享(並沒有) (<a href="#reference-banner">詳細</a>).
 </p>
         <ul class="actions stacked">
             <li><a href="#first" class="button primary large wide smooth-scroll-middle">Get Started</a></li>
@@ -60,7 +60,7 @@
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
     <div class="content">
         <h2>五條悟</h2>
-        <p>這是 <strong>控制</strong> 元素, 簡介:領域展開 &ndash; 無量空處 &ndash; 有興趣的. 可以調整一下五條位置 <span class="demo-controls">appearance with a number of modifiers</span>, 歡迎同好<code>按讚</code> or <code>訂閱</code> 分享(不存在) .
+        <p>這是 <strong>可互動的</strong> 元素, 簡介:領域展開 &ndash; 無量空處 &ndash; 有興趣的. 可以調整一下五條位置 <span class="demo-controls">appearance with a number of modifiers</span>, 歡迎同好<code>按讚</code> or <code>訂閱</code> 分享(不存在) .
 </p>
         <ul class="actions stacked">
             <li><a href="#" class="button">了解更多</a></li>
@@ -74,7 +74,7 @@
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
     <div class="content">
         <h2>戰敗貓咪</h2>
-        <p>一樣同上 <strong>自行遊玩</strong> 設定, 差別在於貓咪是會動的. 喜歡也可以玩一下 <span class="demo-controls">appearance with a number of modifiers</span>, 強烈建議 <code>按讚</code> or <code>訂閱</code> 分享(真的沒有) .
+        <p>與上一個區塊類似， <strong>您可以</strong> 自行嘗試調整設定, 差別在於貓咪是會動的.<span class="demo-controls">appearance with a number of modifiers</span>, 強烈建議 <code>按讚</code> or <code>訂閱</code> 分享(真的沒有) .
 </p>
         <ul class="actions stacked">
             <li><a href="#" class="button">了解更多</a></li>
@@ -102,7 +102,7 @@
 <section class="wrapper style1 align-center" >
     <div class="inner">
         <h2>相簿</h2>
-        <p>這邊是 <strong>相簿</strong> 一樣可以執行同樣操作 ,  <span class="demo-controls">appearance with a number of modifiers</span>, 真的很愛的可以<code>按讚</code> or <code>訂閱</code> 分享(再夢裡) .
+        <p>此處是<strong>相簿區，</strong> 同樣可以執行互動操作 ,  <span class="demo-controls">appearance with a number of modifiers</span>, 真的很愛的可以<code>按讚</code> or <code>訂閱</code> 分享(再夢裡) .
 </p>
     </div>
 
@@ -429,4 +429,5 @@
 
 	</body>
 </html>
+
 
